--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
