--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-webview": "13.12.5",
     "expo-notifications": "~0.29.11",
     "expo-device": "~7.0.1",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
