--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "expo-notifications": "~0.29.11",
     "expo-device": "~7.0.1",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-updates": "~0.26.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
